--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     color: white;
-
+    background-color: #181818;
 }
 
 .content__input {
@@ -13,7 +13,7 @@ body {
 
 .content__input-box {
     border: 0;
-  
+    background-color: #181818;
     font-size: 20px;
     caret-color: white; 
 }
