--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ body {
     background-color: #181818;
     font-size: 20px;
     caret-color: white; 
+    color: white;
     
 }
 
@@ -32,6 +33,24 @@ body {
     outline: none;
 }
 
+
+
+.container {    
+    position: relative;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  
 
 
 
