--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body {
     background-color: #181818;
 }
 
+.content__title {
+    font-size: 50px;
+}
+
 .content__input {
     display: flex;
     justify-content: center;
@@ -14,7 +18,7 @@ body {
 .content__input-box {
     border: 0;
     background-color: #181818;
-    font-size: 20px;
+    font-size: 40px;
     caret-color: white; 
     color: white;
     
@@ -24,8 +28,9 @@ body {
     background-color: white;
     color: black;
     border: 0;
-    width: 35px;
-    height: 25px;
+    width: 65px;
+    height: 50px;
+    font-size: 40px;
     
 }
 
@@ -35,20 +40,11 @@ body {
 
 
 
-.container {    
-    position: relative;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-  }
+.video_sizer {
 
-  .responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-  }
+    width: 1000px;
+    height: 563px;
+}
 
   
 
